--- a/chance/bookChengHuang.html
+++ b/chance/bookChengHuang.html
@@ -57,7 +57,7 @@
                 <p>各家有灶神紀錄。凡人為善為惡。難逃神鑒。</p>
                 <p>蓋在人身中。各有三尸之氣。現於頭上。</p>
                 <p>善氣清而白。惡氣濁而黑。黑白攸分。而善惡明矣。</p>
-                <p>人有肉眼。視而不見神有慧眼。望而先知。</p>
+                <p>人有肉眼。視而不見。神有慧眼。望而先知。</p>
                 <p>故仙佛修煉功深。頭現圓光。俗骨所未有也。</p>
                 <p>然清而白者為善。濁而黑者為惡。人亦何苦。</p>
                 <p>不爲清白。甘為濁黑。清白輕而昇。濁黑重而墜。</p>
