--- a/chance/bookDaDong.html
+++ b/chance/bookDaDong.html
@@ -44,8 +44,8 @@
                 <p>至心歸老祖。求脫人間苦。疾病無纏綿。安寧天擁護。十干十二支。</p>
                 <p>二十八宿主。天神玉女聞。盡皆降吾杵。寶劍自光芒。殺斬妖魅阻。</p>
                 <p>葫蘆貯靈丹。度盡凡夫苦。牢獄枷鎖災。水火並瘟毒。刀兵急厄臨。</p>
-                <p>路中逢險阻。一切苦相縈。持此化成土。隨念隨時來。降我吉星輔。</p>
-                <p>過去盡生方。現存賴恩主。一聲誦永寧。全家伏龍虎  有此聖靈章。</p>
+                <p>路中逢險阻。一切苦相縈。持此化成土。隨唸隨時來。降我吉星輔。</p>
+                <p>過去盡生方。現存賴恩主。一聲誦永寧。全家伏龍虎。有此聖靈章。</p>
                 <p>萬魔咸束首。太上呂帝君。急急如律令。</p>
                 <br><br>
 
@@ -53,17 +53,17 @@
                 <br>
                 <p>孚佑帝君讚曰</p>
                 <p>關聖帝君。作事清白不愧為聖。行為端正方可為神。</p>
-                <p>孔夫子。何為聖。聖所以作春秋也。</p>
-                <p>關夫子。何為聖。聖所以讀春秋也。</p>
+                <p>孔夫子何為聖。聖所以作春秋也。</p>
+                <p>關夫子何為聖。聖所以讀春秋也。</p>
                 <p>先聖後聖其揆一也。</p>
                 <p>古洞引讚真經。</p>
                 <p>梓潼帝君讚曰。桃源古洞真經。</p>
                 <p>天地正氣。道德長存。金闕內相。孚佑帝君。</p>
-                <p>純陽一氣。妙道天尊。慈悲下界醒喚沉淪。</p>
-                <p>或歌或曲或詩或文。婆心切切。戒之諄諄。</p>
+                <p>純陽一炁。妙道天尊。慈悲下界醒喚沉淪。</p>
+                <p>或歌或曲。或詩或文。婆心切切。戒之諄諄。</p>
                 <p>千千集首。萬萬典型。朗讀經偈。神服鬼欽。</p>
-                <p>辟邪除穢。劍斬妖精。葫蘆發火。乃祥乃禎。</p>
-                <p>收妖滅怪。霹靂雷聲。黃巾力士六甲六丁。</p>
+                <p>辟邪除穢。劍斬妖精。葫蘆發火。迺祥迺禎。</p>
+                <p>收妖滅怪。霹靂雷聲。黃巾力士。六甲六丁。</p>
                 <p>千災掃盡。百福來臨。乾元亨利貞。急急如律令。</p>
                 <p>關聖帝君寶讚  志心皈命禮。</p>
                 <p>太薇紫薇。佛賜文尼。大願大眾。大慈大悲。</p>
@@ -72,15 +72,15 @@
                 <p>天君鑒察。柳將查稽。稽查賜福。福壽綿長。</p>
                 <p>金闕內相。道號純陽。葫蘆發火。顯赫立功。</p>
                 <p>威聲普化。閃閃電光。日月星斗。雷雨雲風。</p>
-                <p>三昧真火。一氣青鋒。辟邪滅怪。魑魅魎魍。</p>
+                <p>三昧真火。一炁青鋒。辟邪滅怪。魑魅魎魍。</p>
                 <p>輕聲朗誦。一切皆空。玉樓鑒訂。南天南宮。</p>
                 <p>天歡地喜。鬼沒神藏。乾坎艮震。巽離坤宮。</p>
                 <p>兌招百福。坎納千祥。乾統天兵。艮斬妖精。</p>
                 <p>震捉妖魔。巽賜乃禎。離統雷火。坤載利貞。</p>
                 <p>乾元亨利貞。急急如律令。</p>
-                <p>大洞寶誥。世宇長存。金闕內相。道號純陽。</p>
-                <p>玉樓職任。孚佑帝君。萬書千典有。吾經尚未聞。</p>
-                <p>武帝明聖經。文昌陰騭文。吾著大洞卷。</p>
+                <p>大洞寶誥世宇長存。金闕內相妙道天尊。</p>
+                <p>玉樓職任孚佑帝君。萬書千典有。吾經尚未聞。</p>
+                <p>武帝明聖經。文昌陰騭文。吾著經一卷。</p>
                 <p>三聖齊頒行。三世因果先前有。大洞真經隨後成。</p>
                 <p>昔日但知閬苑客。而今方識太薇星。諭汝傳塵世。</p>
                 <p>使人各遵行。經文雖淺近。不可視為輕。</p>
@@ -90,13 +90,13 @@
                 <p>三山五嶽聽號令。五湖四海各遵行。</p>
                 <p>三光照耀。日月斗星。六丁六甲。值日天兵。</p>
                 <p>二十八宿。聽經號令。</p>
-                <p>天廷日差五雷將。南宮夜使柳徒星。天下城隍並境主。</p>
+                <p>天庭日差五雷將。南宮夜使柳徒星。天下城隍並境主。</p>
                 <p>世宇八方土地神。一切神明聽經語。稽查功過讀聖經。</p>
                 <p>如有世人祈賜福。准行消災福來臨。有過之人當速改。</p>
                 <p>革故鼎新罪移輕。聖人未敢言無過。過勿憚改算為人。</p>
                 <p>缺德之人求懺梅。如改前非亦淮行。時時刻刻知改過。</p>
                 <p>青天不加悔罪人。改卻前非便無過。無過之人吉祥增。</p>
-                <p>再加脩福功完滿。善功完滿樂天倫。樂盡天倫災消滅。</p>
+                <p>再加修福功完滿。善功完滿樂天倫。樂盡天倫災消滅。</p>
                 <p>災消福集道德存。道德長存。風調雨順定太平。</p>
                 <p>國泰民安天賜福。一切災殃化作塵。化作塵。</p>
                 <p>成仙成佛總由人。總由人。四時無災。八節有慶。</p>
@@ -104,7 +104,7 @@
                 <p>古洞大洞桃源經。焚香朗誦虔叩請。祈福即來臨。</p>
                 <p>求壽天賜福。父母享遐齡。伯叔並昆仲。自已可延生。</p>
                 <p>一切高朗誦。分功祥瑞增。如求過世樁萱者。</p>
-                <p>並求怕叔與弟兄。朝夕虔朗誦。快樂逍遙登。</p>
+                <p>並求伯叔與弟兄。朝夕虔朗誦。快樂逍遙登。</p>
                 <p>照吾經中語。九玄七祖盡超昇。若求自已福。</p>
                 <p>並祈闔家平。日讀千百語。夜誦百千聲。</p>
                 <p>驅邪並逐祟。禎祥紫氣臨。求名及與利。</p>
@@ -117,8 +117,7 @@
                 <p>青天不可欺。欲挽人覺悟。神仙下瑤池。</p>
                 <p>或歌或作賦。或曲並吟詩。聲聲喚人醒。</p>
                 <p>句句字珠璣。說吾身。現身說法渡眾生。</p>
-                <p>吾居唐孝廉。出仕甚古風。官吏職。欽點巡狩。</p>
-                <p>逢師鍾。</p>
+                <p>吾居唐孝廉。出仕甚古風。官吏職。欽點巡狩。逢師鍾。</p>
                 <p>一夢南柯熟黃粱。平生事業盡皆空。嗟晚不得。</p>
                 <p>先帝高宗。受師點化。攜妻子榮歸故鄉。住古洞。</p>
                 <p>洞裡之賓取名字。子亡妻卒曰純陽。學劍法柳星收為童。</p>
@@ -129,9 +128,9 @@
                 <p>孽鏡上。憑過功。自已平生不修德。到頭何話見閻王。</p>
                 <p>積些家業如珠寶。難贖冤愆上天堂。何不學成袁了凡。</p>
                 <p>可脫苦海渺茫茫。不孝子。雷電攻。好淫悖逆經免誦。</p>
-                <p>致引天廷降災殃。為人知禮必知義。尊重三綱及五常。</p>
+                <p>致引天庭降災殃。為人知禮必知義。尊重三綱及五常。</p>
                 <p>勤修德。積善功。吾經朗誦恭叩請</p>
-                <p>金闕內相妙道天尊。(三稱)</p>
+                <p>金闕內相妙道天尊 (三稱)</p>
             </div>
 	    </div>
 	</div>
