--- a/chance/bookKaiJingZhou.html
+++ b/chance/bookKaiJingZhou.html
@@ -79,7 +79,7 @@
 
                 <h1>淨天地解穢咒</h1>
                 <br>
-                <p>天地自然。穢氣分散。洞中元虛。晃朗太元。</p>
+                <p>天地自然。穢氣分散。洞中玄虛。晃朗太元。</p>
                 <p>八方威神。使我自然。靈寶符命。普告九天。</p>
                 <p>乾羅嗒哪。洞罡太元。斬妖縛邪。度人萬千。</p>
                 <p>中山神咒。元始玉文。持誦一遍。卻病延年。</p>
@@ -99,7 +99,7 @@
                 <h1>祝香神咒</h1>
                 <br>
                 <p>道由心學。心假香傳。香爇玉爐。心存帝前。</p>
-                <p>真靈下盼。仙佩臨軒。令臣關告。逕達九天。</p>
+                <p>真靈下盼。仙佩臨軒。今臣關告。逕達九天。</p>
                 <br>
                 
                 <h1>金光神咒</h1>
@@ -107,7 +107,6 @@
                 <p>天地玄宗。萬氣本根。廣修萬劫。證我神通。</p>
                 <p>三界內外。惟道獨尊。體有金光。覆映我身。</p>
                 <p>視之不見。聽之不聞。包羅天地。養育群生。</p>
-                <p>誦持萬遍。身有光明。三界侍衛。五帝伺迎。</p>
                 <p>誦持萬遍。身有光明。三界侍衛。五帝伺迎。</p>
                 <p>萬神朝禮。役使雷霆。鬼妖喪膽。精怪亡形。</p>
                 <p>內有霹靂。雷神隱名。洞慧交徹。五氣騰騰。</p>
