--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -58,6 +58,7 @@
                 <p>吾是漢關聖帝。&nbsp&nbsp敕諭大眾聽聞。</p>
                 <p>世上不齊等事。&nbsp&nbsp全憑一點真心。</p>
                 <p>正直光明不屈。&nbsp&nbsp死生順逆當分。</p>
+                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp(先主、桓侯)</p>
                 <p>吾嘗下遊漢季。&nbsp&nbsp結盟皇叔三人。</p>
                 <p>桃園名重千古。&nbsp&nbsp單刀秉燭於今。</p>
                 <p>寄曹明來明去。&nbsp&nbsp吞吳為漢超生。</p>
@@ -102,12 +103,12 @@
                 <br>
                 <p>漢漢壽亭侯。略節桃園經。書於玉泉寺。夜夢與凡人。</p>
                 <p>萬經千典有。吾經未舉行。著爾傳塵世。不可視為輕。</p>
-                <p>焚香高朗誦。其福即來臨。人能鈔錄送。諸疾不相侵。</p>
+                <p>焚香高朗誦。其福即來臨。人能抄印送。諸疾不相侵。</p>
                 <p>家宅供此經。妖魅化為塵。船舟奉此經。風波即刻平。</p>
                 <p>行人佩此經。途路保安寧。書生看此經。不久步青雲。</p>
-                <p>婦人誦此經。二女五男成。若為亡化念。亡化早超生。</p>
-                <p>若為父母念。父母享遐齡。日念三五遍。或誦百千聲。</p>
-                <p>諸神皆歡喜。宅舍並光明。凶事化為吉。福祿壽重增。</p>
+                <p>婦人誦此經。二女五男成。若為亡化唸。亡化早超生。</p>
+                <p>若為父母唸。父母享遐齡。日唸三五遍。或誦百千聲。</p>
+                <p>諸神皆歡喜。宅舍並光明。凶事化為吉。福.祿.壽.重增。</p>
 
                 <p>太上道君三界靈。眾聖五嶽雷電神。</p>
                 <p>五湖並四海。&nbsp&nbsp&nbsp&nbsp&nbsp日月斗星辰。</p>
@@ -115,16 +116,16 @@
                 <p>值年值月將。&nbsp&nbsp&nbsp&nbsp&nbsp值日值時神。</p>
                 <p>夜差黑煞帥。&nbsp&nbsp&nbsp&nbsp&nbsp日令皎潔兵。</p>
                 <p>往來細鑒察。&nbsp&nbsp&nbsp&nbsp&nbsp不得漏亳分。</p>
-                <p>會同家宅神。&nbsp&nbsp&nbsp&nbsp&nbsp著令司命君。</p>
+                <p>會同家宅神(祖)。著令司命君。</p>
                 <p>如有虔誦男和女。速速報知聞。
                 <p>或賜福與壽。&nbsp&nbsp&nbsp&nbsp&nbsp或蔭兒與孫。</p>
                 <p>萬聖朝真均奏議。普天之下盡頒行。</p>
 
-                <p>吾素覽春秋。幼觀孔孟。惟以孝弟為先。修身治國為本。</p>
+                <p>吾素覽春秋。幼觀孔孟。惟以孝悌為先。修身治國為本。</p>
                 <p>異端蜂起。兵戈傷殘民命。十餘年。甲不離身。刀無潔淨。</p>
                 <p>夜無穩睡三更。日不飽餐一頓。東戰西征。百戰而江山纔定。</p>
                 <p>白了鬚鬢星星。力倦馬羸刀鈍。費盡赤膽忠心。換得個封侯金印。</p>
-                <p>到如今亂臣賊子。捕風捉影。奸貪讒佞。結黨欺凌。言無一定。</p>
+                <p>到如今亂臣賊子。捕風捉影。奸貪讒佞。結黨欺良。言無一定。</p>
                 <p>不思禮義廉恥。孝悌忠信。事每胡行。屢圖僥倖。篡君位。</p>
                 <p>戮忠臣。好貨財。淫美色。殺人縱性。只顧爽心樂事。</p>
                 <p>豈曉得後來報應。古今好事多磨。毋勉強苟求捷徑。如彩雲琉璃。</p>
@@ -138,12 +139,12 @@
                 <p>偈曰</p>
                 <p>吾本天樞第六星。 臨凡欲使萬方寧。 形容雖去神猶在。留得精英震百靈。</p>
                 <br>
-                <p>明聖經大眾聽。吾乃紫微宮裏朱衣神。協管文昌武曲星。祇因張仙無主轄。</p>
+                <p>明聖經大眾聽。吾乃紫微宮裏朱衣神。協管文昌武曲星。祇因張仙(大帝)無主轄。</p>
                 <p>敕令隨吾為從神。檢點少男與少女。或損陰騭絕子孫。送生催生及難產。</p>
-                <p>魅妖傷殘班痘疹。如有焚香諷誦者。轉禍為祥顯聖靈。今有塑畫吾像者。</p>
-                <p>側立張仙持彈弓。鑒知戰國侵凌亂。命吾臨凡救萬民。</p>
+                <p>魅妖傷殘斑痘疹。如有焚香諷誦者。轉禍為祥顯聖靈。今有塑畫吾像者。</p>
+                <p>側立張仙(大帝)持彈弓。鑒知戰國侵凌亂。命吾臨凡救萬民。</p>
                 <p>玉皇賜吾名和姓。子胥五轉做忠臣。</p>
-                <p>臨潼解釋諸候難。卻絕奸秦并國心。</p>
+                <p>臨潼解釋諸候難。絕卻奸秦并國心。</p>
                 <p>楚無道。酒荒淫。昭關過此難。吳越動刀兵。</p>
                 <p>道吾一生為孝子。數世做忠臣。敕令吾管錢塘事。</p>
                 <p>晝夜領潮行。漢室多奸黨。改姓下凡塵。</p>
@@ -160,13 +161,13 @@
                 <p>天地。結義匡扶漢室。破黃巾。誅董卓。呂布斃。</p>
                 <p>劫寨剿曹奸。鑽入空營內。雁侶散徐州。攜嫂無存地。</p>
                 <p>減燭張遼謀。破壁聖帝義。降漢不降曹。忠臣不事二。</p>
-                <p>封漢壽亭侯。隱無漢重鑄。&nbsp&nbsp三日華筵。曹瞞美意。</p>
+                <p>封漢壽亭侯。隱無漢重鑄。三日華筵。曹瞞美意。</p>
                 <p>顏良文醜統兵圍。敢對立功。可酬曹歸計。封金卻印三辭曹。</p>
                 <p>挈眷尋兄一點忠。千里尋兄添義氣。五關斬將有威風。</p>
                 <p>離合英雄乾坤內。相逢兄弟古城中。智尚雖高無決勝。</p>
                 <p>運籌固識少經綸。三謁茅籚。臥龍晏起。大夢誰先覺。</p>
                 <p>平生相盡知。草堂春睡足。窗外日遲遲。未出茅籚。</p>
-                <p>三分已定。孔明原是廣慧星。即是前朝嚴子陵（先師）。</p>
+                <p>三分已定。孔明（武侯）原是廣慧星。即是前朝嚴子陵（先師）。</p>
                 <p>此生諸葛亮（相）。再宋朱文公。輪迴三世相。永不下凡塵。</p>
                 <p>鼎足三分嫌地窄。江山今換許多人。大哥(先主)已在清虛府。</p>
                 <p>關某(聖帝)今掌三天門。三弟(桓侯)四川為土榖。每起忠良護國心。</p>
@@ -177,7 +178,7 @@
                 <p>為人忠孝感天地。&nbsp&nbsp豈在持齋佛顯靈。</p>
                 <p>飲食衣服休華美。&nbsp&nbsp隨著隨餐莫厭爭。</p>
                 <p>禽獸一切皆性命。&nbsp&nbsp無故自食宰生靈。</p>
-                <p>一切化生皆活命。&nbsp&nbsp何苦張捕網尋。</p>
+                <p>一切化生皆活命。&nbsp&nbsp何苦張弓捕網尋。</p>
                 <p>草木果花休折採。&nbsp&nbsp嚴冬零落發陽春。</p>
                 <p>萬物悉含天地化。&nbsp&nbsp依時生長與人靈。</p>
                 <p>汝能遵守惜萬物。&nbsp&nbsp福有攸歸禍不侵。</p>
@@ -187,7 +188,7 @@
                 <p>爾能聽吾行善事。&nbsp&nbsp定有祥雲足下騰。</p>
                 <p>吾受三天門掌握。&nbsp&nbsp萬神啟奏吾先聞。</p>
                 <p>善者紀錄加官爵。&nbsp&nbsp惡者遭殃絕子孫。</p>
-                <p>報應遲速時未到。&nbsp&nbsp昭彰早晚福終臨。</p>
+                <p>報應遲速時未到。&nbsp&nbsp昭彰早晚必終臨。</p>
                 <p>休道天高無耳目。&nbsp&nbsp虧心暗室有遊神。</p>
                 <p>敬神如在須誠敬。&nbsp&nbsp不可狂言褻聖明。</p>
                 <p>萬國九州皆敬服。&nbsp&nbsp道吾忠義獨稱尊。</p>
@@ -219,14 +220,14 @@
                 <p>紀錄文華殿。舉劾建章宮。丹心如赤日。位必至三公。</p>
                 <p>秦檜世為犬。岳飛(武穆)四帥中。 </p>
                 <p>為人子。孝為先。孝順兩字緊相聯。</p>
-                <p>勿惱怒。常使歡。煖衣飽食無饑寒。</p>
+                <p>勿惱怒。常使歡。暖衣飽食勿饑寒。</p>
                 <p>病醫藥。必自煎。即須嘗過獻親前。</p>
                 <p>夜不解衣朝不食。時時刻刻在身邊。</p>
                 <p>爾能孝順爾子孝。點點滴滴看簷前。</p>
                 <p>大舜孝。帝位傳。二十四孝極周全。</p>
                 <p>在生不供奉。死後祭靈前。不孝子。</p>
                 <p>惹災愆。虎唅蛇咬病相纏。官刑牢獄遭充配。</p>
-                <p>水火之火實可憐。或自懸樑刀毒死。</p>
+                <p>水火之災實可憐。或自懸樑刀毒死。</p>
                 <p>不孝之人苦萬千。速速改。莫遲延。</p>
                 <p>世人孰無過。改之為善賢。</p>
                 <p>人無過。篤行全。廉生畏。潔生嚴。</p>
@@ -240,7 +241,7 @@
                 <p>鷈食曾如糟李美。瓜祭何勝菜羹甜。</p>
                 <p>俸祿止堪供禮義。舉家食費僅盤桓。</p>
                 <p>百篢抬回失節物。滿箱裝裹昧心錢。</p>
-                <p>笞杖徒流誰不怕。勸爾抬頭看上天。</p>
+                <p>笞杖流徒誰不怕。勸爾抬頭看上天。</p>
                 <p>縱容男僕如狼虎。謀佔軍民地與田。</p>
                 <p>勢敗運衰參訐告。拔塚平房冤報冤。</p>
                 <p>婦男窮極為娼盜。恨殺當初惡要錢。</p>
@@ -311,16 +312,16 @@
 
                 <p>明聖經本係夢與玉泉寺僧。僧醒而傳述。</p>
                 <p>首句漢漢。上一漢字乃代名。即大漢也。</p>
-                <p>漢壽亭。係地名也。其先噣咐人人誦此經。</p>
-                <p>是以效驗。歆動人心也。中言精忠沖日月。</p>
+                <p>漢壽亭。係地名也。其先噣咐人人誦此經者。</p>
+                <p>是以效驗歆動人心也。中言精忠沖日月。</p>
                 <p>義氣貫乾坤。即孟子所謂塞乎天地也。</p>
                 <p>曰面赤鬚長者。即大學所謂心廣體胖。</p>
                 <p>孟子所謂睟面盎背也。至投胎轉劫之說。</p>
                 <p>儒者不言。不知釋道兩門。並非無據。</p>
                 <p>試歷查古今。借尸還魂。靈殼轉寄。</p>
-                <p>異物入胎。豈少也哉。吾言在列國在漢。</p>
-                <p>與在唐宋之言。實非誑也。諸君試對之。</p>
-                <p>再四章言忠。文武臣僚。皆當敬體。</p>
+                <p>異物入胎。豈少也哉。吾言在列國在漢</p>
+                <p>與在唐宋之言。實非誑也。諸君試對核之。</p>
+                <p>再四章言忠。文武臣僚皆當敬體。</p>
                 <p>則是三代以上之臣也。夔龍.伊皋其人也。</p>
                 <p>言孝則曰。不解衣不食。則侍膳寢門。</p>
                 <p>文王其人也。滴水還源。孫又效子。則子孫保之。</p>
@@ -329,7 +330,7 @@
                 <p>廉在周禮。以六計為定。實從義字中生。</p>
                 <p>故為愚昧者痛斥。而廉泉盜水。舉一二而已括之也。</p>
                 <p>節如竹.竹有筠也。如月.月有度也。</p>
-                <p>非筠刖溷。非度則昏。古今大節不踰者。於義殆盡。</p>
+                <p>非筠則溷。非度則昏。古今大節不踰者。於義殆盡。</p>
                 <p>後遣諸神鑒察。以使速應。吾亦大費婆心。</p>
                 <p>以吾為驕。吾固不辭。以吾為淺。吾亦不辭。</p>
                 <p>但願人人從此驕言淺言做去。一一果自信於心中。</p>
@@ -353,9 +354,9 @@
                 <p>馬騎赤兔。刀偃青龍。</p>
                 <p>離合英雄乾坤內。相逢兄弟古城中。</p>
                 <p>大業既定三分。壯志未成一統。</p>
-                <p>嘆江山。幾次改動。蒙恩榮。祀典崇隆。</p>
-                <p>憫蒼生。駕動鸞輿。念赤子。路出蠶叢。</p>
-                <p>觀紅塵。無限慒橦。見黑氣。甚是惡凶。</p>
+                <p>嘆江山幾次改動。蒙恩榮祀典崇隆。</p>
+                <p>憫蒼生駕動鸞輿。念赤子路出蠶叢。</p>
+                <p>觀紅塵無限慒橦。見黑氣甚是惡凶。</p>
                 <p>忠厚和平堪恕。機巧變詐難容。盡皆是。</p>
                 <p>為子不孝。為臣不忠。</p>
                 <p>為兄不友。為弟不恭。</p>
@@ -365,17 +366,17 @@
                 <p>做出許多傀儡。造成無數巧功。</p>
                 <p>只圖肥潤自己。那知惱怒天公。</p>
                 <p>降下了諸般劫數。收伏那惡人種種。</p>
-                <p>水火刀兵未了。疾病瘟又逢。</p>
+                <p>水火刀兵未了。疾病瘟皇(打不出來疒+皇)又逢。</p>
                 <p>鬼哭神嚎。山搖地動。</p>
                 <p>轉瞬間三九堪痛。曲江上火龍夾攻。</p>
                 <p>那時節。</p>
                 <p>父不見其子。弟不顧其兄。</p>
                 <p>夫婦分南北。親戚各東西。</p>
                 <p>百年事業成何用。萬古功名總是空。</p>
-                <p>某不忍。生民遭塗炭。</p>
-                <p>某不忍。善惡無異同。</p>
+                <p>某(聖)不忍。生民遭塗炭。</p>
+                <p>某(聖)不忍。善惡無異同。</p>
                 <p>幾次泣叩</p>
-                <p>靈霄寶殿中。一心心只想劫數消鎔。</p>
+                <p>靈霄寶殿中。一心心只想劫數消融。</p>
                 <p>鬢髮班班白。血淚點點紅。</p>
                 <p>一誠達聖聰。五劫漸緩鬆。</p>
                 <p>又感動三星臨凡塵。八仙出崆峒。</p>
@@ -383,10 +384,10 @@
                 <p>振瞶發聾。諄諄諭文。汗牛充棟。</p>
                 <p>不惟加毀謗。而且置塵封。</p>
                 <p>化不轉囂囂世道。挽不回蚩蚩愚氓。</p>
-                <p>想當初。錯把拏玉旨手捧。</p>
-                <p>到今朝。又有何顏對玄穹。</p>
+                <p>想當初錯把拏玉旨手捧。</p>
+                <p>到今朝又有何顏對玄穹。</p>
                 <p>沒奈何。再把這脣舌弄。</p>
-                <p>眾凡民。一個個須諒某苦衷。</p>
+                <p>眾凡民。一個個須諒某(聖)苦衷。</p>
                 <p>一不要爾銀錢。二不要爾齋供。</p>
                 <p>只要爾。</p>
                 <p>父慈子孝。兄友弟恭。</p>
@@ -394,13 +395,13 @@
                 <p>方便時時行。經典多多誦。</p>
                 <p>聖諭宣講。神訓遵崇。</p>
                 <p>從此六戒保身。自今三畏參躬。</p>
-                <p>做一個頂天立地大豪傑。</p>
+                <p>做一位頂天立地大豪傑。</p>
                 <p>為一個調元贊化大英雄。</p>
                 <p>切勿為善不勇。切勿畏難不終。</p>
                 <p>功行滿。超登三界。善果圓。逕上九重。</p>
                 <p>朝金闕。謁瓊宮。聖神歡悅。仙佛隆重。</p>
                 <p>其樂也洩洩。其喜也融融。</p>
-                <p>蓋天古佛。昭明翼漢大天尊。(三稱)</p>
+                <p>蓋天古佛昭明翼漢大天尊。(三稱)</p>
                 <br><br>
                 <h1>關聖帝君覺世真經</h1>
                 <br>
@@ -418,10 +419,10 @@
                 <p>愛兄弟。信朋友。睦宗族。和鄉鄰。別夫婦。教子孫。</p>
                 <p>時行方便。廣積陰功。救難濟急。恤孤憐貧。創修廟宇。</p>
                 <p>印造經文。捨藥施茶。戒殺放生。造橋修路。矜孤拔困。</p>
-                <p>重栗惜福。排難解釋。捐資成美。垂訓教人。冤仇解釋。</p>
+                <p>重栗惜福。排難解紛。捐資成美。垂訓教人。冤仇解釋。</p>
                 <p>斗秤公平。親近有德。遠避凶人。隱惡揚善。利物利人。</p>
                 <p>回心向道。改過自新。滿腔仁慈。惡念不存。一切善事。</p>
-                <p>信心奉行。人雖不見﹐神已早聞。加福增壽。添子益孫。</p>
+                <p>信心奉行。人雖不見。神已早聞。加福增壽。添子益孫。</p>
                 <p>災消病減。禍患不侵。人物咸寧。吉星照臨。若存惡心。</p>
                 <p>不行善事。淫人妻女。破人婚姻。壞人名節。嫉人技能。</p>
                 <p>謀人財產。唆人爭訟。損人利己。肥家潤身。恨天怨地。</p>
@@ -431,7 +432,7 @@
                 <p>瞞心昧己。大斗小秤。假立邪教。引誘愚人。詭說升天。</p>
                 <p>歛物行淫。明瞞暗騙。橫言曲語。白日詛咒。背地謀害。</p>
                 <p>不存天理。不順人心。不信報應。引人作惡。不修片善。</p>
-                <p>行諸惡事。官詞口舌。水火盜賊。惡毒瘟疫。生敗產蠹。</p>
+                <p>行諸惡事。官詞口舌。水火盜賊。惡毒瘟疫。生敗產蠢。</p>
                 <p>殺身亡家。男盜女淫。近報在身。遠報子孫。神明鑒察。</p>
                 <p>毫髮不紊。善惡兩途。禍福攸分。行善福報。作惡禍臨。</p>
                 <p>吾作斯語。願人奉行。言雖淺近。大益身心。戲侮吾言。</p>
