--- a/chance/bookShengYu.html
+++ b/chance/bookShengYu.html
@@ -46,9 +46,9 @@
                 <p>馬騎赤兔。刀偃青龍。</p>
                 <p>離合英雄乾坤內。相逢兄弟古城中。</p>
                 <p>大業既定三分。壯志未成一統。</p>
-                <p>嘆江山。幾次改動。蒙恩榮。祀典崇隆。</p>
-                <p>憫蒼生。駕動鸞輿。念赤子。路出蠶叢。</p>
-                <p>觀紅塵。無限慒橦。見黑氣。甚是惡凶。</p>
+                <p>嘆江山幾次改動。蒙恩榮祀典崇隆。</p>
+                <p>憫蒼生駕動鸞輿。念赤子路出蠶叢。</p>
+                <p>觀紅塵無限慒橦。見黑氣甚是惡凶。</p>
                 <p>忠厚和平堪恕。機巧變詐難容。盡皆是。</p>
                 <p>為子不孝。為臣不忠。</p>
                 <p>為兄不友。為弟不恭。</p>
@@ -58,17 +58,17 @@
                 <p>做出許多傀儡。造成無數巧功。</p>
                 <p>只圖肥潤自己。那知惱怒天公。</p>
                 <p>降下了諸般劫數。收伏那惡人種種。</p>
-                <p>水火刀兵未了。疾病瘟又逢。</p>
+                <p>水火刀兵未了。疾病瘟皇(打不出來疒+皇)又逢。</p>
                 <p>鬼哭神嚎。山搖地動。</p>
                 <p>轉瞬間三九堪痛。曲江上火龍夾攻。</p>
                 <p>那時節。</p>
                 <p>父不見其子。弟不顧其兄。</p>
                 <p>夫婦分南北。親戚各東西。</p>
                 <p>百年事業成何用。萬古功名總是空。</p>
-                <p>某不忍。生民遭塗炭。</p>
-                <p>某不忍。善惡無異同。</p>
+                <p>某(聖)不忍。生民遭塗炭。</p>
+                <p>某(聖)不忍。善惡無異同。</p>
                 <p>幾次泣叩</p>
-                <p>靈霄寶殿中。一心心只想劫數消鎔。</p>
+                <p>靈霄寶殿中。一心心只想劫數消融。</p>
                 <p>鬢髮班班白。血淚點點紅。</p>
                 <p>一誠達聖聰。五劫漸緩鬆。</p>
                 <p>又感動三星臨凡塵。八仙出崆峒。</p>
@@ -76,10 +76,10 @@
                 <p>振瞶發聾。諄諄諭文。汗牛充棟。</p>
                 <p>不惟加毀謗。而且置塵封。</p>
                 <p>化不轉囂囂世道。挽不回蚩蚩愚氓。</p>
-                <p>想當初。錯把拏玉旨手捧。</p>
-                <p>到今朝。又有何顏對玄穹。</p>
+                <p>想當初錯把拏玉旨手捧。</p>
+                <p>到今朝又有何顏對玄穹。</p>
                 <p>沒奈何。再把這脣舌弄。</p>
-                <p>眾凡民。一個個須諒某苦衷。</p>
+                <p>眾凡民。一個個須諒某(聖)苦衷。</p>
                 <p>一不要爾銀錢。二不要爾齋供。</p>
                 <p>只要爾。</p>
                 <p>父慈子孝。兄友弟恭。</p>
@@ -87,13 +87,13 @@
                 <p>方便時時行。經典多多誦。</p>
                 <p>聖諭宣講。神訓遵崇。</p>
                 <p>從此六戒保身。自今三畏參躬。</p>
-                <p>做一個頂天立地大豪傑。</p>
+                <p>做一位頂天立地大豪傑。</p>
                 <p>為一個調元贊化大英雄。</p>
                 <p>切勿為善不勇。切勿畏難不終。</p>
                 <p>功行滿。超登三界。善果圓。逕上九重。</p>
                 <p>朝金闕。謁瓊宮。聖神歡悅。仙佛隆重。</p>
                 <p>其樂也洩洩。其喜也融融。</p>
-                <p>蓋天古佛。昭明翼漢大天尊。(三稱)</p>
+                <p>蓋天古佛昭明翼漢大天尊。(三稱)</p>
             </div>
 	    </div>
 	</div>
