--- a/chance/bookYinZhi.html
+++ b/chance/bookYinZhi.html
@@ -43,7 +43,7 @@
                 <p>帝君曰。</p>
                 <p>吾一十七世為士大夫身。未嘗虐民酷吏。救人之難。</p>
                 <p>濟人之急。憫人之孤。容人之過。廣行陰騭。</p>
-                <p>上格蒼穹。人能如我存心。天必錫汝以福。</p>
+                <p>上格蒼穹。人能如我存心。天必賜汝以福。</p>
                 <p>於是訓於人曰。</p>
                 <p>昔于公治獄。大興駟馬之門。竇氏濟人。高折五枝之桂。</p>
                 <p>救蟻。中狀元之選。埋蛇。享宰相之榮。</p>
@@ -56,7 +56,7 @@
                 <p>矜孤恤寡。敬老憐貧。舉善薦賢。饒人責己。</p>
                 <p>措衣食。周道路之饑寒。施棺槨。免屍骸之暴露。</p>
                 <p>造漏澤之仁園。興啟蒙之義塾。</p>
-                <p>家富。提攜親戚。歲饑。賑濟鄰朋。</p>
+                <p>家富提攜親戚。歲饑賑濟鄰朋。</p>
                 <p>斗秤須要公平。不可輕出重入。</p>
                 <p>奴僕待之寬恕。豈宜備責苛求。</p>
                 <p>印造經文。創修寺院。</p>
@@ -68,7 +68,7 @@
                 <p>勿宰耕牛。勿棄字紙。勿謀人之財產。</p>
                 <p>勿妒人之技能。勿淫人之妻女。勿唆人之爭訟。</p>
                 <p>勿壞人之名利。勿破人之婚姻。</p>
-                <p>勿因私讎。使人兄弟不和。勿因小利。使人父子不睦。</p>
+                <p>勿因私讎使人兄弟不和。勿因小利使人父子不睦。</p>
                 <p>勿倚權勢而辱善良。勿恃富豪而欺窮困。</p>
                 <p>依本分而致謙恭。守規矩而遵法度。</p>
                 <p>諧和宗族。解釋冤怨。</p>
