--- a/chance/bookDaDong.html
+++ b/chance/bookDaDong.html
@@ -73,7 +73,7 @@
                 <p>金闕內相。道號純陽。葫蘆發火。顯赫立功。</p>
                 <p>威聲普化。閃閃電光。日月星斗。雷雨雲風。</p>
                 <p>三昧真火。一炁青鋒。辟邪滅怪。魑魅魎魍。</p>
-                <p>輕聲朗誦。一切皆空。玉樓鑒訂。南天南宮。</p>
+                <p>經聲朗誦。一切皆空。玉樓鑒訂。南天南宮。</p>
                 <p>天歡地喜。鬼沒神藏。乾坎艮震。巽離坤宮。</p>
                 <p>兌招百福。坎納千祥。乾統天兵。艮斬妖精。</p>
                 <p>震捉妖魔。巽賜乃禎。離統雷火。坤載利貞。</p>
