--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -44,7 +44,7 @@
                 <br>
                 <p>太上神威。英文雄武。精忠大義。高節清廉。</p>
                 <p>協運皇圖。德崇演正。掌儒道釋教之權。管天地人才之柄。</p>
-                <p>上司三十六天。星辰雲漢。下轄七十二地。冥壘幽酆。</p>
+                <p>上司三十六天。星辰雲漢。下轄七十二地。土壘幽酆。</p>
                 <p>秉註生功德。延壽丹書。執定生死罪過。奪命黑籍。</p>
                 <p>考察諸佛諸神。監制群仙群職。德圓妙果。無量度人。</p>
                 <p>萬靈萬聖。至上至尊。  忠孝祖師。  伏魔大帝。</p>
