--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -248,7 +248,7 @@
 
                 <p>人之節。</p>
                 <p>如竹又如月。廣大與高明。圓容更清潔。</p>
-                <p>一生直不彎。挺挺欺霜雪。一勁參天秀。</p>
+                <p>一生直不彎。挺挺期霜雪。一勁參天秀。</p>
                 <p>舞風奔明月。娥英泣竹林。點點斑皆血。</p>
                 <p>即如蘇武杖。數有十二節。李陵污其奸。</p>
                 <p>蘇武敬其烈。仲升使西域。三十六國郤。</p>
@@ -264,7 +264,7 @@
                 <p>地獄即城隍。三寶星日月。</p>
                 <p>救濟急難人。就是解冤結。</p>
                 <p>此四節。忠孝廉節。詳明甚切。後列二十四劫。</p>
-                <p>擎天頂地猛勇神。&nbsp&nbsp捧日舉月普照神。</p>
+                <p>擎天頂地猛勇神。&nbsp&nbsp捧日舉月普照星。</p>
                 <p>列宿張星明朗神。&nbsp&nbsp騰雲駕霧飛度星。</p>
                 <p>驅雷掣電威烈神。&nbsp&nbsp呼風喚雨擾攘星。</p>
                 <p>降霜落雪變通星。&nbsp&nbsp賞善罰惡正直神。</p>
@@ -305,7 +305,7 @@
                 <p>嗚呼。是必欲吾重作吾經。</p>
                 <p>待世之智愚賢不肖。皆盡讀之乎。</p>
                 <p>不獨此也。現在身列文儒。亦妄行指駁。</p>
-                <p>吾因周子凜凜。持誦多年。只得註解明白。</p>
+                <p>吾因周子凜禀。持誦多年。只得註解明白。</p>
                 <p>如再有擅行詆毀者。輕則令瘟火滅之。</p>
                 <p>重則命周倉（將軍）斬之。毋悔。</p>
 
@@ -380,7 +380,7 @@
                 <p>鬢髮班班白。血淚點點紅。</p>
                 <p>一誠達聖聰。五劫漸緩鬆。</p>
                 <p>又感動三星臨凡塵。八仙出崆峒。</p>
-                <p>聖佛神真廣大帡幪。處處飛鸞。</p>
+                <p>聖佛神真。廣大帡幪。處處飛鸞。</p>
                 <p>振瞶發聾。諄諄諭文。汗牛充棟。</p>
                 <p>不惟加毀謗。而且置塵封。</p>
                 <p>化不轉囂囂世道。挽不回蚩蚩愚氓。</p>
@@ -401,7 +401,7 @@
                 <p>功行滿。超登三界。善果圓。逕上九重。</p>
                 <p>朝金闕。謁瓊宮。聖神歡悅。仙佛隆重。</p>
                 <p>其樂也洩洩。其喜也融融。</p>
-                <p>蓋天古佛昭明翼漢大天尊。(三稱)</p>
+                <p>蓋天古佛。昭明翼漢大天尊。(三稱)</p>
                 <br><br>
                 <h1>關聖帝君覺世真經</h1>
                 <br>
