--- a/chance/bookXingHua.html
+++ b/chance/bookXingHua.html
@@ -117,7 +117,7 @@
                 <p>陽世那個說是真 敲瞌他人錢合米</p>
                 <p>變做牛馬還他人 爾看一報還一報</p>
                 <p>奉勸男女仔細想 莫把吾言當假真</p>
-                <p>笑順父母為第一 忠君愛民一等人</p>
+                <p>孝順父母為第一 忠君愛民一等人</p>
                 <p>第二須當敬兄長 第三夫婦要和平</p>
                 <p>朋友說話要信實 奴僕寬恕可在心</p>
                 <p>一般也是父母養 只為家寒兩離分</p>
