--- a/chance/bookMingSheng.html
+++ b/chance/bookMingSheng.html
@@ -101,6 +101,9 @@
 
                 <h1>關聖帝君應驗桃園明聖經</h1>
                 <br>
+                <p>開經讚</p>
+                <p>古佛明聖經。千載歎未曾。皈依無上道。乾元亨利貞。</p>
+                <br>
                 <p>漢漢壽亭侯。略節桃園經。書於玉泉寺。夜夢與凡人。</p>
                 <p>萬經千典有。吾經未舉行。著爾傳塵世。不可視為輕。</p>
                 <p>焚香高朗誦。其福即來臨。人能抄印送。諸疾不相侵。</p>
