--- a/chance/bookXingHua.html
+++ b/chance/bookXingHua.html
@@ -57,7 +57,7 @@
                 <p>生享榮華添百福 死歸神道蔭兒孫</p>
                 <p>今經一卷非閒說 人世休將做具文</p>
                 <p>叮嚀切切留心記 天大福基在此敦</p>
-                <p>男婦果能遵教訓 修功積德姓名芳</p>
+                <p>男婦果能遵教訓 修功積德姓名芬</p>
                 <p>(金經誦畢焚香九叩禮續誦)     </p>
                 <br><br>
                 <h1>灶王神經</h1>
