--- a/chance/bookBeiDou.html
+++ b/chance/bookBeiDou.html
@@ -98,7 +98,7 @@
                 <p>死在陰司還受罪 你想逃脫萬不能</p>
                 <p>罪滿轉輪王發放 善惡報應見分明</p>
                 <p>大善投胎大富貴 中等頭胎中等人</p>
-                <p>大惡投生變畜類 小惡投生變賤貧</p>
+                <p>大惡脫生變畜類 小惡投生變賤貧</p>
                 <p>或是癡聾與瘖啞 牛馬豬羊去還人</p>
                 <p>灶王今把凡民勸 依得神言是福人</p>
                 <p>虧心除盡平生福 奸巧短壽把命傾</p>
@@ -111,7 +111,7 @@
                 <p>貪人財物喪良心 暗地把人來唆弄</p>
                 <p>他再中間做好人 有的仗勢來欺弱</p>
                 <p>欺老罵少起惡心 打僧罵道怨天地</p>
-                <p>勸人開葷罪不輕 作賤五穀該何罪</p>
+                <p>勸人開齋罪不輕 作賤五穀該何罪</p>
                 <p>貪圖口腹忍傷生 在生之時不自問</p>
                 <p>死後陰司見假真 地獄受盡千般苦</p>
                 <p>陽世那個說是真 敲瞌他人錢合米</p>
@@ -144,7 +144,7 @@
                 <p>不和妯娌 不敬夫君 暗唆丈夫 遂把家分</p>
                 <p>若分家業 不讓分文 爾為男子 罔有乃身</p>
                 <p>放僻邪侈 奸盜邪淫 縱使妻子 辱罵尊親</p>
-                <p>不分內外 不別尊卑 好尚作偽 欺哄愚人</p>
+                <p>不分內外 不別尊卑 好尚詐偽 欺哄愚人</p>
                 <p>閑遊懶惰 不重儉勤 謀人田產 百計橫強</p>
                 <p>貧不安分 詐索金銀 至於吾灶 五祀獨尊</p>
                 <p>或傍牛圈 或對豬門 近或雞圈 臭氣難聞</p>
