--- a/chance/choose_chance.html
+++ b/chance/choose_chance.html
@@ -133,7 +133,7 @@
 			console.log(i);
 		}
 		$('#end').hide();
-		$('#clean').show();
+		// $('#clean').show();
 		hideYesNo();
 		//move to namelist
 		$body.animate({
