--- a/chance/pageHeader.html
+++ b/chance/pageHeader.html
@@ -42,6 +42,7 @@
             <li><a href="bookHuaTuo.html">華佗經</a></li>
             <li><a href="bookShengYu.html">聖諭</a></li>
             <li><a href="bookYinZhi.html">陰騭文</a></li>
+            <li><a href="bookDiscipleRules.html">弟子規</a></li>
           </ul>
         </li><!--/.dropdown -->
       </ul>
