--- a/chance/medicine_info.html
+++ b/chance/medicine_info.html
@@ -54,9 +54,10 @@
                 <p>青皮: 青皮為未成熟果實的果皮,跟陳皮不同</p>
                 <p>丹皮: 牡丹皮</p>
                 <p>厚朴: 油朴, 正油朴</p>
-                <p>畏羌: 畏薑(炮製過的薑)</p>
+                <p>畏羌: 煨薑(製過的薑)</p>
                 <p>天毛: 香茅</p>
                 <p>枸杞: 甘杞(品質較好的)</p>
+                <p>金銀花: 銀花, 忍冬</p>
                 <p>秦艽: 蓁芄??</p>
                 <p>益智子: 益智仁, 益智??</p>
                 <p>青蒿: 菁蒿???</p>
@@ -66,7 +67,8 @@
                 <p>黃岑: 黃芩??</p>
                 <p>刈花: 葛花??</p>
                 <p>麻黃: "麻黃根"與"麻黃"不同,前者為根部後者為莖部</p>
-
+                <h1>一字真</h1>
+                <p>芽黃: 大黃</p>
             </div>
 	    </div>
 	</div>
